--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "classnames": "^2.3.2",
+    "keen-slider": "^6.8.6",
     "next": "13.4.16",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
     "sass": "^1.65.1",
     "swiper": "^10.1.0",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.10"
   }
 }
