--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-gql": "graphql-codegen --config ./src/graphql/codegen.yml && prettier --write ./src/graphql/__generated__.ts"
   },
   "dependencies": {
     "@fancyapps/ui": "^5.0.22",
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-graphql-request": "^5.0.0",
+    "@graphql-codegen/typescript-operations": "^4.0.1",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "classnames": "^2.3.2",
+    "graphql-request": "^6.1.0",
     "keen-slider": "^6.8.6",
     "next": "13.4.16",
     "nextjs-progressbar": "^0.0.16",
