--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "classnames": "^2.3.2",
     "graphql-request": "^6.1.0",
     "keen-slider": "^6.8.6",
+    "lodash.range": "^3.2.0",
     "next": "13.4.16",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
@@ -31,6 +32,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/lodash.range": "^3.2.7",
     "@types/react-slick": "^0.23.10"
   }
 }
