--- a/src/graphql/codegen.yml
+++ b/src/graphql/codegen.yml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: process.env.GRAPHQL_API_URL
+schema: http://localhost:1337/graphql
 documents: './src/graphql/**/*.gql'
 generates:
   ./src/graphql/__generated__.ts:
