--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "generate-gql": "graphql-codegen --config ./src/graphql/codegen.yml && prettier --write ./src/graphql/__generated__.ts"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.28.0",
     "@fancyapps/ui": "^5.0.22",
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/typescript": "^4.0.1",
@@ -19,6 +20,7 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "classnames": "^2.3.2",
+    "editorjs-html": "^3.4.3",
     "graphql-request": "^6.1.0",
     "keen-slider": "^6.8.6",
     "lodash.range": "^3.2.0",
@@ -27,6 +29,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-slick": "^0.29.0",
+    "remark": "^14.0.3",
+    "remark-html": "^15.0.2",
     "sass": "^1.65.1",
     "swiper": "^10.1.0",
     "typescript": "5.1.6"
