--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-slick": "^0.29.0",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
