--- a/src/graphql/codegen.yml
+++ b/src/graphql/codegen.yml
@@ -1,6 +1,6 @@
 overwrite: true
 schema: http://localhost:1337/graphql
-documents: './src/graphql/**/*.gql'
+documents: "./src/graphql/**/*.gql"
 generates:
   ./src/graphql/__generated__.ts:
     plugins:
@@ -8,6 +8,6 @@ generates:
       - typescript-operations
       - typescript-graphql-request
 config:
-  maybeValue: 'T'
+  maybeValue: "T"
   avoidOptionals: true
   immutableTypes: true
